Replaced even more redislabs URLs.

--- a/docs/howtos/redisbloom/index-redisbloom.mdx
+++ b/docs/howtos/redisbloom/index-redisbloom.mdx
@@ -20,7 +20,7 @@ The RedisBloom module provides four data types:
 
 ### Step 1. Create free cloud account
 
-Create your free <a href="https://redislabs.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
+Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
 ![My Image](tryfree.png)
 
@@ -146,7 +146,7 @@ In the above example, the first command shows the result as “1” for both the
 
 ### Next Step 
 
-- Learn more about RedisBloom in the [Quick Start](https://oss.redislabs.com/redisbloom/Quick_Start/) tutorial.
-- [How to build a Fraud Detection System using RedisGears and RedisBloom](https://developer.redislabs.com/howtos/frauddetection/)
-- [How to Use Redis for Content Filtering](https://redislabs.com/blog/use-redis-content-filtering/)
-- [Benefits of RedisBloom](https://redislabs.com/modules/redis-bloom/)
+- Learn more about RedisBloom in the [Quick Start](https://oss.redis.com/redisbloom/Quick_Start/) tutorial.
+- [How to build a Fraud Detection System using RedisGears and RedisBloom](https://developer.redis.com/howtos/frauddetection/)
+- [How to Use Redis for Content Filtering](https://redis.com/blog/use-redis-content-filtering/)
+- [Benefits of RedisBloom](https://redis.com/modules/redis-bloom/)
