--- a/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_1/index-lesson_1.mdx
@@ -86,8 +86,8 @@ Read the [Git documentation on submodules](https://git-scm.com/book/en/v2/Git-To
 
 You’ll find this file in the [redismod-docker-compose repo](https://github.com/redis-developer/redismod-docker-compose),
 hosted under the [redis-developer](https://github.com/redis-developer/) organization in Github.
-The Repo contains a [Docker Compose](https://docs.docker.com/compose) file configured to use the Redis Labs “redismod” image, which is a Docker image
-that includes Redis built with  select Redis Labs modules. In particular, we will use the [RedisJSON](https://redisjson.io), [RediSearch](https://redisearch.io),
+The Repo contains a [Docker Compose](https://docs.docker.com/compose) file configured to use the Redis “redismod” image, which is a Docker image
+that includes Redis built with select modules. In particular, we will use the [RedisJSON](https://redisjson.io), [RediSearch](https://redisearch.io),
 and [RedisGraph](https://redisgraph.io) modules while building this application.
 
 Modules included in the container:
