--- a/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
+++ b/docs/develop/java/spring/redis-and-spring-course/lesson_8/index-lesson_8.mdx
@@ -64,7 +64,7 @@ The above snippet could be used to create the relationship if used with the GRAP
 
 Until now, we have been using the Redis CLI, curl, and the output of our Java programs to interact with Redis.
 
-If there is one place where we can use visualization is with graph data. RedisInsight is a free product from Redis Labs that provides an intuitive graphical user interface for managing Redis databases.
+If there is one place where we can use visualization is with graph data. RedisInsight is a free product from Redis that provides an intuitive graphical user interface for managing Redis databases.
 RedisInsight also supports some popular Redis modules, and we'll use it in this lesson to visualize our graphs.
 If you want to get the best possible understanding of the materials in this chapter, please download and install RedisInsight.
 
