--- a/docs/develop/node/node-crash-course/whatisredis/index-whatisredis.mdx
+++ b/docs/develop/node/node-crash-course/whatisredis/index-whatisredis.mdx
@@ -34,6 +34,6 @@ Redis is also often used as a cache, and has specific functionality to support t
 Here's some resources that we think will be useful to you as you discover Redis:
 
 * [redis.io](https://redis.io/) - the official website of open source Redis.
-* [Redis Enterprise Cloud](https://redis.com/redis-enterprise-cloud/overview/) - a fully managed cloud service from Redis Labs - you can try it out using the full featured free tier.
+* [Redis Enterprise Cloud](https://redis.com/redis-enterprise-cloud/overview/) - a fully managed cloud service from Redis - you can try it out using the full featured free tier.
 * The official [Redis Docker image](https://hub.docker.com/_/redis/).
 * For a comprehensive introduction to Redis, we recommend taking a look at the [RU101, Introduction to Redis Data Structures](https://university.redis.com/courses/ru101/) course at Redis University. In this free online course, you’ll learn about the data structures in Redis, and you’ll see how to practically apply them in the real world.
