--- a/docs/explore/redisdatasource/index-redisdatasource.mdx
+++ b/docs/explore/redisdatasource/index-redisdatasource.mdx
@@ -177,7 +177,7 @@ Assuming that Docker Compose is already installed in your system, follow the bel
 
 #### Step 2. Execute the docker-compose CLI 
 
-Project provides `docker-compose.yml` to start Redis with all Redis Labs modules and Grafana.
+Project provides `docker-compose.yml` to start Redis with all modules and Grafana.
 
  ```bash
   docker-compose up -d
