--- a/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
+++ b/docs/explore/redisinsight/redisgraph/index-redisgraph.mdx
@@ -43,7 +43,7 @@ Follow the below steps to see how your data is connected via the RedisInsight Br
 ## Step 2: Download RedisInsight
 
 
-To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+To install RedisInsight on your local system, you need to first download the software from the Redis website.
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
