--- a/docs/explore/redismod/index-redismod.mdx
+++ b/docs/explore/redismod/index-redismod.mdx
@@ -13,7 +13,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-This simple container image bundles together the latest stable releases of Redis and select Redis modules from Redis Labs.
+This simple container image bundles together the latest stable releases of Redis and select Redis modules.
 This image is based on the official image of Redis from Docker. By default, the container starts with Redis' default configuration and all included modules loaded.
 
 ### Modules included in the container
