--- a/docs/get-involved/discord/index-discord.mdx
+++ b/docs/get-involved/discord/index-discord.mdx
@@ -7,7 +7,7 @@ slug: /community/discord/
 
 The [Redis Discord server](https://discord.gg/redis) is a place where you can learn, share, and collaborate about anything and everything Redis.
 
-- Connect with users from the community, Redis University, and Redis Labs.
+- Connect with users from the community, Redis University, and Redis Inc.
 - Get your questions answered and learn cool new tips and tricks.
 - Watch for notifications of new content from Redis and the community.
 - Share your knowledge and expertise with others.
