--- a/docs/howtos/shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/shoppingcart/index-shoppingcart.mdx
@@ -769,7 +769,7 @@ In the client directory, under the subdirectory src, open the file App.vue. You 
             </v-row>
 
             <v-footer class="mt-12 pa-0">
-                © Copyright 2021 | All Rights Reserved to Redis Labs
+                © Copyright 2021 | All Rights Reserved Redis
             </v-footer>
         </v-container>
     </v-app>
