--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -153,7 +153,7 @@ Open  https://localhost:8443 on the browser to see the Redis Enterprise Software
 
 ## Next Step
 
-- [Redis Labs Kubernetes Architecture](https://docs.redis.com/latest/kubernetes/architecture/)
+- [Redis Kubernetes Architecture](https://docs.redis.com/latest/kubernetes/architecture/)
 - [Redis Enterprise Kubernetes Operator-based Architecture](https://docs.redis.com/latest/kubernetes/architecture/operator/)
 - [Sizing and Scaling a Redis Enterprise Cluster Deployment on Kubernetes](https://docs.redis.com/latest/kubernetes/memory/sizing-on-kubernetes/)
 
