--- a/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
+++ b/docs/explore/redisinsight/memoryanalyzer/index-memoryanalyzer.mdx
@@ -37,7 +37,7 @@ Follow the steps below to see how memory analysis can be performed over Redis Da
 ## Step 2: Download RedisInsight
 
 
-To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+To install RedisInsight on your local system, you need to first download the software from the Redis website.
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
