--- a/docs/explore/redisinsight/redisgears/index-redisgears.mdx
+++ b/docs/explore/redisinsight/redisgears/index-redisgears.mdx
@@ -33,7 +33,7 @@ Follow the below steps to get started with the RedisInsight browser tool for Red
 ## Step 2: Download RedisInsight
 
 
-To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+To install RedisInsight on your local system, you need to first download the software from the Redis website.
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
