--- a/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
+++ b/docs/explore/redisinsight/redistimeseries/index-redistimeseries.mdx
@@ -34,7 +34,7 @@ With RedisInsight browser tool, you can perform the below sets of activities:
 ## Step 2: Download RedisInsight
 
 
-To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+To install RedisInsight on your local system, you need to first download the software from the Redis website.
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
