--- a/docs/explore/redisinsight/slowlog/index-slowlog.mdx
+++ b/docs/explore/redisinsight/slowlog/index-slowlog.mdx
@@ -25,7 +25,7 @@ Follow [https://developer.redis.com/create](https://developer.redis.com/create) 
 ## Step 2: Download RedisInsight
 
 
-To install RedisInsight on your local system, you need to first download the software from Redis Labs website.
+To install RedisInsight on your local system, you need to first download the software from the Redis website.
 
 [Click this link ](https://redis.com/redis-enterprise/redis-insight/#insight-form) to access a form that allows you to select the operating system of your choice.
 
