--- a/docs/howtos/index-howtos.mdx
+++ b/docs/howtos/index-howtos.mdx
@@ -10,7 +10,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 ## HowTos
 
-This page holds a catalog with dozens of ready-to-use app listings from Redis Labs. Now it is easy to build, test and  deploy software that runs using Redis.
+This page holds a catalog with dozens of ready-to-use app listings from Redis. Now it is easy to build, test and  deploy software that runs using Redis.
 
 
 <div class="row">
