--- a/docs/howtos/redisjson/redisjson-cheatsheet/index-redisjson-cheatsheet.mdx
+++ b/docs/howtos/redisjson/redisjson-cheatsheet/index-redisjson-cheatsheet.mdx
@@ -23,7 +23,7 @@ authors: [ajeet]
 | <button><b>[JSON.ARRINDEX](https://oss.redis.com/redisjson/commands/#jsonarrindex)</b></button> | Search for the first occurrence of a scalar JSON value in an array | <code>JSON.ARRINDEX &lt;key&gt; &lt;path&gt; &lt;json-scalar&gt; [start [stop]]</code> |
 | <button><b>[JSON.ARRPOP](https://oss.redis.com/redisjson/commands/#jsonarrpop)</b></button> | Remove and return element from the index in the array | <code>JSON.ARRPOP &lt;key&gt;  [path [index]]</code> |
 | <button><b>[JSON.ARRTRIM](https://oss.redis.com/redisjson/commands/#jsonarrtrim)</b></button> |Trim an array so that it contains only the specified inclusive range of elements | <code>JSON.ARRTRIM &lt;key&gt; &lt;path&gt; &lt;start&gt; &lt;stop&gt;</code> |
-| <button><b>[JON.OBJKEYS](https://oss.redis.com/redisjson/commands/#jsonobjkeys)</b></button> | Return the keys in the object that's referenced by path | <code>JSON.OBJKEYS &lt;key&gt; [path]</code> |
+| <button><b>[JSON.OBJKEYS](https://oss.redis.com/redisjson/commands/#jsonobjkeys)</b></button> | Return the keys in the object that's referenced by path | <code>JSON.OBJKEYS &lt;key&gt; [path]</code> |
 | <button><b>[JSON.OBJLEN](https://oss.redis.com/redisjson/commands/#jsonobjlen)</b></button> |Report the number of keys in the JSON Object at path in key | <code>JSON.OBJLEN &lt;key&gt; [path] </code> |
 | <button><b>[JSON.DEBUG](https://oss.redis.com/redisjson/commands/#jsondebug)</b></button> | Report information | <code>JSON.DEBUG &lt;subcommand & arguments&gt;</code> |
 | <button><b>[JSON.RESP](https://oss.redis.com/redisjson/commands/#jsonresp)</b></button> | Return the JSON in key in Redis Serialization Protocol (RESP)| <code>JSON.RESP &lt;key&gt; [path]</code> ||
