Adds some broad key messages to include.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -9,3 +9,15 @@ useNextPrev: false
 ---
 
 TODO... content here.
+
+Things we want to include:
+
+- This is a festival of events which we are delivering every day from 1st to 24th December 2021 inclusive
+- It will be one live stream per day which shows you something cool you can do with Redis and encourage you to continue in your own time
+- Join us on Discord to show us what you've made
+- Upcoming events/topics are: 1st Dec, 2nd Dec etc
+- Your presenters are (maybe include bios for each of us)
+- If you want to learn about Redis and earn a certificate, check out our RU courses
+- Follow us on Twitch to get a push notification when we go live
+- Streams will be at different times of day and all the recordings will be on our YouTube channel - subscribe there to get notifications
+- 
