tutorial: Redis OM Spring Tutorial #1

--- a/docs/develop/java/index-java.mdx
+++ b/docs/develop/java/index-java.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-java
-title: Java and Redis 
+title: Java and Redis
 sidebar_label: Overview
 slug: /develop/java
 ---
@@ -9,7 +9,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-The following links provides you with the available options to develop your application using NodeJS and Redis
+Explore the many different ways to build Java applications powered by Redis:
 
 <div class="row">
 
