Work in progress on Devcember.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -7,17 +7,56 @@ authors: [suze,simon]
 isEditable: false
 useNextPrev: false
 ---
+## What's it all About?
 
-TODO... content here.
+We're excited to announce Devcember, a month-long festival of live online events and fun challenges, showcasing Redis and our community!
 
-Things we want to include:
+[Join us on Twitch](https://www.twitch.tv/redislabs) for a daily 15-20 minute live stream on Monday to Friday where we'll introduce Redis concepts, share projects that you can contribute to and have some fun banter.  For Saturday and Sunday, we’ll give you a mini challenge to complete.
 
-- This is a festival of events which we are delivering every day from 1st to 24th December 2021 inclusive
-- It will be one live stream per day which shows you something cool you can do with Redis and encourage you to continue in your own time
-- Join us on Discord to show us what you've made
-- Upcoming events/topics are: 1st Dec, 2nd Dec etc
-- Your presenters are (maybe include bios for each of us)
-- If you want to learn about Redis and earn a certificate, check out our RU courses
-- Follow us on Twitch to get a push notification when we go live
-- Streams will be at different times of day and all the recordings will be on our YouTube channel - subscribe there to get notifications
-- 
+Don't worry if you miss a stream - we'll post them on [YouTube](https://www.youtube.com/c/Redisinc/videos) and embed them in the schedule below.  
+
+**The fun begins Wednesday 1st December 2021 at 10am UTC.**
+
+## Meet the Team
+
+Your regular presenters are:
+
+### Suze Shardlow, Developer Community Manager
+
+TODO PICTURE
+
+Suze leads developer community at Redis.  She’s a software engineer, published tech author and event MC who has spoken at several global tech conferences.  When she’s not talking databases and putting together content, she loves crafting!
+
+### Justin Castilla, Developer Advocate
+
+TODO PICTURE
+
+Justin is a Developer Advocate at Redis. He has helped to produce several courses at Redis University and has created numerous videos for the Redis YouTube channel.
+
+### Simon Prickett, Developer Advocacy Manager
+
+TODO PICTURE
+
+Simon Prickett is the Developer Advocacy Manager at Redis. He began his career writing C++ for Hewlett-Packard Labs, and has subsequently held senior roles with companies ranging from startups to enterprises including Capital One, USA Today, and New Zealand’s Customs Service.  Away from professional life Simon enjoys traveling, cycling, and building devices with microcontrollers.
+
+<hr/>
+
+We'll also feature guest appearances from other members of the Redis developer relations team!
+
+## Live Schedule
+
+We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redislabs) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
+
+|Date/Time           |Topic                                                    |Join Us!                                |
+|--------------------|---------------------------------------------------------|----------------------------------------|
+| Wed 1 Dec, 11am UTC|Welcome to Devcember, get started with Redis in the Cloud|[twitch.tv](https://twitch.tv/redislabs)|
+
+## Join the Fun!
+
+Be sure to [follow us on Twitch](https://www.twitch.tv/redislabs) to be notified when we're online!  We'd also love to see you on the [Redis Discord](https://discord.gg/nrTwSyUvF2), where there's a dedicated channel for all things Devcember.  This is where you can chat with us throughout the day and get help and information about the fun Redis commands / coding challenges we'll post for you to try on weekends.
+
+If you're on Twitter, use hashtag **#RedisDevcember** to join the conversation.
+
+## Learn More
+
+To learn more about Redis and get yourself a certificate that you can add to your LinkedIn profile, check out our [free online courses at Redis University](https://university.redis.com/) which are available all year round.  There's something for everyone!
