Updated Twitch link.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -11,7 +11,7 @@ useNextPrev: false
 
 We're excited to announce Devcember, a month-long festival of live online events and fun challenges, showcasing Redis and our community!
 
-[Join us on Twitch](https://www.twitch.tv/redislabs) for a daily 15-20 minute live stream on Monday to Friday where we'll introduce Redis concepts, share projects that you can contribute to and have some fun banter.  For Saturday and Sunday, we’ll give you a mini challenge to complete.
+[Join us on Twitch](https://www.twitch.tv/redisinc) for a daily 15-20 minute live stream on Monday to Friday where we'll introduce Redis concepts, share projects that you can contribute to and have some fun banter.  For Saturday and Sunday, we’ll give you a mini challenge to complete.
 
 Don't worry if you miss a stream - we'll post them on [YouTube](https://www.youtube.com/c/Redisinc/videos) and embed them in the schedule below.  
 
@@ -19,11 +19,11 @@ Don't worry if you miss a stream - we'll post them on [YouTube](https://www.yout
 
 ## Live Schedule
 
-We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redislabs) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
+We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
 
 |Date/Time         |Topic                                                    |Join Us!                                |
 |------------------|---------------------------------------------------------|----------------------------------------|
-|Wed 1 Dec, 9am UTC|Welcome to Devcember, get started with Redis in the Cloud|[twitch.tv](https://twitch.tv/redislabs)|
+|Wed 1 Dec, 9am UTC|Welcome to Devcember, get started with Redis in the Cloud|[twitch.tv](https://www.twitch.tv/redisinc)|
 
 
 ## Meet the Team
@@ -48,7 +48,7 @@ We'll also feature guest appearances from other members of the Redis developer r
 
 ## Join the Fun!
 
-Be sure to [follow us on Twitch](https://www.twitch.tv/redislabs) to be notified when we're online!  We'd also love to see you on the [Redis Discord](https://discord.gg/nrTwSyUvF2), where there's a dedicated channel for all things Devcember.  This is where you can chat with us throughout the day and get help and information about the fun Redis commands / coding challenges we'll post for you to try on weekends.
+Be sure to [follow us on Twitch](https://www.twitch.tv/redisinc) to be notified when we're online!  We'd also love to see you on the [Redis Discord](https://discord.gg/nrTwSyUvF2), where there's a dedicated channel for all things Devcember.  This is where you can chat with us throughout the day and get help and information about the fun Redis commands / coding challenges we'll post for you to try on weekends.
 
 If you're on Twitter, use hashtag **#RedisDevcember** to join the conversation.
 
