Updates the schedule.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -21,10 +21,10 @@ Don't worry if you miss a stream - we'll post them on [YouTube](https://www.yout
 
 We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
 
-|Date/Time         |Topic                                                    |Join Us!                                   |
-|------------------|---------------------------------------------------------|-------------------------------------------|
-|Wed 1 Dec, 9am UTC|Welcome to DEVcember, get started with Redis in the Cloud|[twitch.tv](https://www.twitch.tv/redisinc)|
-
+|Date/Time             |Topic                                                    |Join Us!                                                          |
+|----------------------|---------------------------------------------------------|------------------------------------------------------------------|
+|Wed 1 Dec, 9am UTC    |Welcome to DEVcember, Get Started with Redis in the Cloud|[Watch the recording](https://www.youtube.com/watch?v=jf-lwkWUQHg)|
+|Thu 2 Dec, 10.30am UTC|Up and Running with RedisInsight                         |[twitch.tv](https://www.twitch.tv/redisinc)                       |
 
 ## Meet the Team
 
