Adds the Day One video.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -23,8 +23,8 @@ We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) each w
 
 |Date/Time             |Topic                                                    |Join Us!                                                          |
 |----------------------|---------------------------------------------------------|------------------------------------------------------------------|
-|Wed 1 Dec, 9am UTC    |Welcome to DEVcember, Get Started with Redis in the Cloud|[Watch the recording](https://www.youtube.com/watch?v=jf-lwkWUQHg)|
-|Thu 2 Dec, 10.30am UTC|Up and Running with RedisInsight                         |[twitch.tv](https://www.twitch.tv/redisinc)                       |
+|Wed 1 Dec, 9am UTC    |Welcome to DEVcember, Get Started with Redis in the Cloud|<iframe src="https://www.youtube.com/embed/jf-lwkWUQHg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>|
+|Thu 2 Dec, 10.30am UTC|Up and Running with RedisInsight                         |[Redis on Twitch](https://www.twitch.tv/redisinc)                       |
 
 ## Meet the Team
 
