Adds the YouTube link for people to watch live.

--- a/docs/get-involved/devcember/index-devcember.mdx
+++ b/docs/get-involved/devcember/index-devcember.mdx
@@ -11,7 +11,7 @@ useNextPrev: false
 
 We're excited to announce DEVcember, a month-long festival of live online events and fun challenges, showcasing Redis and our community!
 
-[Join us on Twitch](https://www.twitch.tv/redisinc) for a daily 15-20 minute live stream on Monday to Friday where we'll introduce Redis concepts, share projects that you can contribute to and have some fun banter.  For Saturday and Sunday, we’ll give you a mini challenge to complete.
+[Join us on Twitch](https://www.twitch.tv/redisinc) or [YouTube](https://www.youtube.com/c/Redisinc/videos) for a daily 15-20 minute live stream on Monday to Friday where we'll introduce Redis concepts, share projects that you can contribute to and have some fun banter.  For Saturday and Sunday, we’ll give you a mini challenge to complete.
 
 Don't worry if you miss a stream - we'll post them on [YouTube](https://www.youtube.com/c/Redisinc/videos) and embed them in the schedule below.  
 
@@ -19,7 +19,7 @@ Don't worry if you miss a stream - we'll post them on [YouTube](https://www.yout
 
 ## Live Schedule
 
-We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
+We'll be on the [Redis channel on Twitch](https://www.twitch.tv/redisinc) and [YouTube](https://www.youtube.com/c/Redisinc/videos) each working day in December… times will vary and we'll update the schedule below daily, revealing each day's topic as we go.
 
 |Date/Time             |Topic                                                    |Join Us!                                                          |
 |----------------------|---------------------------------------------------------|------------------------------------------------------------------|
