--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -12,7 +12,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
 
-RedisInsight v2.0 is a complete product rewrite based on a new tech stack based on Electron, Elastic UI and Monaco Editor. This version contains a number of must-have and most-used capabilities from previous releases, plus a number of differentiators and delighters.
+RedisInsight v2.0 is a complete product rewrite based on a new tech stack comprising of Electron, Elastic UI and Monaco Editor. This version contains a number of must-have and most-used capabilities from previous releases, plus a number of differentiators and delighters.
 
 
 <div class="text--center">
