--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -62,7 +62,7 @@ Click on the RedisInsight executable and install it in your system.
 
 ![My Image](images/image2.png)
 
-Once RedisInsight software is installed, click on its icon to open the RedisInsight application. It will open up End-User License Agreement and Privacy Settings. Enable Analytics and Encrypt sensitive information as per your preference.
+Once the RedisInsight software is installed, click on its icon to open the RedisInsight application. It will display the End-User License Agreement and Privacy Settings. Enable Analytics and Encrypt sensitive information as per your preference.
 
 ![My Image](images/image3.png)
 
