--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -66,7 +66,7 @@ Once the RedisInsight software is installed, click on its icon to open the Redis
 
 ![My Image](images/image3.png)
 
-### Step 3. Changing the appearance
+### Step 3. Changing the Theme
 
 RedisInsight v2.x allows you to specify the color theme of your choice. Click on "Settings" and change the appearance from "Dark Theme" to "Light Theme" as shown in the image below:
 
