--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -73,7 +73,7 @@ RedisInsight v2.x allows you to specify the color theme of your choice. Click on
 ![My Image](images/image_appearance.png)
 
 
-### Step 4. Connect to Redis Database
+### Step 4. Connect to a Redis Database
 
 There are multiple ways you can connect to a Redis database - either by creating a new Redis Enterprise Cloud database or connecting to an existing database. To connect to Redis Enterprise Cloud, choose the "Create a Free on Redis Cloud" option.
 
