--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -212,7 +212,7 @@ Once added, you will see the database added as shown below:
 
 ### Step 7. Adding a New Key
 
-Select "Key" icon on the left sidebar of RedisInsight UI and click "+Key" to add a new key
+Select the "Key" icon on the left sidebar of RedisInsight UI and click "+Key" to add a new key.
 
 ![My Image](images/image_71.png)
 
