--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -264,7 +264,7 @@ Once you download the bits, double-click the file 'RedisInsight-preview-win-inst
 
 Double-click on RedisInsight icon to access RedisInsight.
 
-### Step 4. Changing the appearance
+### Step 4. Changing the Theme
 
 RedisInsight v2.x allows you to specify the color theme of your choice. Click on "Settings" and change the appearance from "Dark Theme" to "Light Theme" as shown in the image below:
 
