--- a/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
+++ b/docs/explore/redisinsightv2/getting-started/index-gettingstarted.mdx
@@ -271,7 +271,7 @@ RedisInsight v2.x allows you to specify the color theme of your choice. Click on
 ![My Image](images/image_appearance.png)
 
 
-### Step 5. Add Redis database
+### Step 5. Add a Redis Database
 
 Enter the requested details, including Host (endpoint), Port, and Alias in the form, as shown below. You can skip username for now. Then click “ADD REDIS DATABASE”:
 
